# tulsa-job-spot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  timeline.md
app/: config.py  database.py  dependencies.py  main.py  templates.py  utils.py
app/models/: __init__.py  application.py  company.py  job.py  reference.py  scraping.py  settings.py  user.py
app/routers/: auth.py  companies.py  jobs.py  profile.py
app/routers/admin/: __init__.py
app/routers/moderator/: __init__.py
app/scrapers/: base.py
app/scripts/: seed.py
app/static/css/: main.css
app/templates/: base.html
app/templates/admin/: cities.html  companies_create.html  dashboard.html  functions.html  import_companies.html  moderators.html  reference_table.html  scrapers.html  scraping_log.html  settings.html  users.html
app/templates/auth/: login.html
app/templates/companies/: create.html  edit.html  employer_listings.html  index.html  join.html  (+5 more)
app/workers/: email.py  main.py  scraper.py
docker/: Caddyfile  Dockerfile
docs/: architecture.md  deferred.md  deployment-runbook.md  feature-spec.md  how-to-import-companies.md  project-context-summary.md  running-tests.md  security-review.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_scraper_sources.py  0003_company_slug.py  0004_company_site_name.py  0005_site_settings.py  0006_job_boards_setting.py  0007_user_headline.py  0008_user_education.py
tests/: conftest.py  test_company.py  test_security.py  test_smoke.py
(+17 files in other folders)
