[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tulsajobspot"
version = "0.1.0"
description = "Free, open-source community job board"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
